<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="30dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:background="@drawable/id_card_background"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        android:src="@drawable/denis"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/photo_content_description"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/name_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_default_text"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginTop="80dp"
                        android:textColor="#000000"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/position_default_text"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="#FF0000"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:layout_gravity="bottom"
                            android:text="@string/given_text"
                            android:textColor="#000000"
                            android:textSize="15sp"
                            android:layout_weight="7"
                            tools:ignore="RtlHardcoded"
                            android:textStyle="bold"
                            android:layout_marginRight="10dp"/>

                        <TextView
                            android:id="@+id/data"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/default_date"
                            android:textColor="#000000"
                            android:gravity="bottom"
                            android:textStyle="bold"
                            android:textSize="15sp"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/qr_code"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/qr_code"
                    android:src="@drawable/unnamed" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>