<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBCBCB"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/enter_data"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/actor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:autofillHints="login"
                android:background="@drawable/login_outline"
                android:drawableStart="@drawable/login_asset"
                android:drawableLeft="@drawable/login_asset"
                android:drawablePadding="20dp"
                android:hint="@string/loginHint"
                android:inputType="textAutoComplete"
                android:padding="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:layout_marginHorizontal="30dp"
                android:autofillHints="login"
                android:background="@drawable/password_outline"
                android:drawableStart="@drawable/password_asset"
                android:drawableLeft="@drawable/password_asset"
                android:drawablePadding="20dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:gravity="center">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="40dp"
                    android:layout_height="60dp"
                    android:layout_gravity="top"
                    android:background="@drawable/login_button"
                    android:text="@string/login_button"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:padding="10dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_height="100dp"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/r_and_d_logo"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/description_login_page"
                android:textSize="10sp"
                app:fontFamily="@font/actor"
                tools:ignore="SmallSp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/login_activity_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appName"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold"
                app:fontFamily="@font/audiowide"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="21dp"
                android:layout_height="23dp"
                android:layout_gravity="top"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:srcCompat="@drawable/r"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="40dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>